// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<Label>
  <label
    className="emotion-0 emotion-1"
  >
    foobar
  </label>
</Label>
`;

exports[`renders a left aligned label with form control 2`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-left: 10px;
}

<Label
  labelAlignment="left"
  renderControl={[Function]}
>
  <label
    className="emotion-1 emotion-2"
  >
    foobar
    <div
      className="emotion-0"
    />
  </label>
</Label>
`;
